# core

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  build.rs  support.md
.github/workflows/: release.yml
linguaspark/: CMakeLists.txt  export.map  linguaspark.cpp  linguaspark.h
src/: lib.rs
